ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

if WITH_SWITCHAPI
MAYBE_SWITCHAPI = switchapi
endif

if WITH_SWITCHSAI
MAYBE_SWITCHSAI = switchsai
endif

if WITH_SWITCHLINK
MAYBE_SWITCHLINK = switchlink
endif

if WITH_BMV2
MAYBE_BMV2 = bmv2
endif

SUBDIRS = p4-build $(MAYBE_SWITCHAPI) $(MAYBE_SWITCHSAI) $(MAYBE_SWITCHLINK) \
$(MAYBE_BMV2) .

@DX_RULES@
MOSTLYCLEANFILES = $(DX_CLEANFILES)

# AM_DISTCHECK_CONFIGURE_FLAGS = --with-bmv2 --with-switchlink
